Actualizar index.html

--- a/index.html
+++ b/index.html
@@ -1,35 +1,97 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Punto Bling</title>
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <meta name="description" content="SONOSAKI - Accesorios y ropa moderna estilo Y2K. Descubre nuestras últimas colecciones.">
+    <title>PUNTO BLING</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="icon" href="https://placehold.co/100x100/333/fff?text=S" type="image/png">
 </head>
 <body>
 
-    <!-- Logotipo -->
+    <!-- HEADER -->
     <header>
-        <img src="logotipo.jpg" alt="Punto Bling Logo" id="logo">
+        <div class="logo">
+            <h1="Punto Bling">
+        </div>
+        <nav>
+            <ul>
+                <li><a href="#home">Inicio</a></li>
+                <li><a href="#shop">Tienda</a></li>
+                <li><a href="#contact">Contacto</a></li>
+                <li><a href="#cart">Carrito</a></li>
+            </ul>
+        </nav>
     </header>
 
-    <!-- Contenedor de categorías -->
-    <div class="categories-container">
-        <div class="category" id="chains">
-            <h1>Chain 1</h1>
-            <img src="chain1.jpg" alt="Chain 1">
+    <!-- BANNER PRINCIPAL -->
+    <section id="home" class="banner">
+        <div class="banner-content">
+            <h2>Accesorios Modernos para Ti</h2>
+            <p>Descubre las últimas tendencias en cadenas, ropa y más</p>
+            <a href="#shop" class="btn">Ver Colección</a>
         </div>
+    </section>
 
-        <div class="category" id="collares">
-            <h1>Collar 1</h1>
-            <img src="collar1.jpg" alt="Collar 1">
+    <!-- TIENDA -->
+    <section id="shop" class="shop">
+        <h2>Productos Destacados</h2>
+        <div class="product-container">
+            <div class="product">
+                <img src="collar1.jpg" alt="Cadena Elegante">
+                <h3>Cadena Elegante</h3>
+                <p>$19.99</p>
+                <button class="add-to-cart" onclick="addToCart('Cadena Elegante', 19.99)">Añadir al carrito</button>
+            </div>
+            <div class="product">
+                <img src="chain1.jpg" alt="Camiseta Moderna">
+                <h3>Camiseta Moderna</h3>
+                <p>$29.99</p>
+                <button class="add-to-cart" onclick="addToCart('Camiseta Moderna', 29.99)">Añadir al carrito</button>
+            </div>
+            <div class="product">
+                <img src="joya1.jpg" alt="Pulsera Y2K">
+                <h3>Pulsera Y2K</h3>
+                <p>$9.99</p>
+                <button class="add-to-cart" onclick="addToCart('Pulsera Y2K', 9.99)">Añadir al carrito</button>
+            </div>
         </div>
+    </section>
 
-        <div class="category" id="joyas">
-            <h1>Joya 1</h1>
-            <img src="chain1.jpg" alt="Joya 1">
+    <!-- CARRITO -->
+    <section id="cart" class="cart">
+        <h2>Carrito de Compras</h2>
+        <div id="cart-content">
+            <p>No hay productos en el carrito.</p>
         </div>
-    </div>
+        <button id="checkout" class="btn" disabled>Ir al checkout</button>
+    </section>
 
+    <!-- CONTACTO -->
+    <section id="contact" class="contact">
+        <h2>Contacto</h2>
+        <p>¿Tienes alguna pregunta? ¡Escríbenos!</p>
+        <form>
+            <input type="text" placeholder="Tu Nombre" required>
+            <input type="email" placeholder="Tu Correo" required>
+            <textarea placeholder="Tu Mensaje" required></textarea>
+            <button type="submit" class="btn">Enviar</button>
+        </form>
+    </section>
+
+    <!-- FOOTER -->
+    <footer>
+        <img src="https://via.placeholder.com/100x50?text=SONOSAKI" alt="SONOSAKI Logo Footer">
+        <p>&copy; 2025 SONOSAKI. Todos los derechos reservados.</p>
+        <div>
+            <a href="#">Instagram</a> | 
+            <a href="#">Facebook</a> | 
+            <a href="#">TikTok</a>
+        </div>
+    </footer>
+
+    <script src="script.js"></script>
 </body>
 </html>
