Actualizar index.html

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <!-- HEADER -->
     <header>
         <div class="logo">
-            <h1="Punto Bling">
+            <img src="logotipo.jpg">
         </div>
         <nav>
             <ul>
